app-deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: trafefik
  rules:
  - host: webapp.home.smolit.de
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc
              port:
                number: 80
  tls:
    - hosts:
      - webapp.home.smolit.de
      secretName: k8s-cert
